[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "DexonlineParser"
version = "0.0.3"
authors = [
  { name="Eric Floyd", email="erixefb@gmail.com" },
]
description = "Dexonline Parser package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Bodhi2011/DexParser"
"Bug Tracker" = "https://github.com/Bodhi2011/DexParser/issues"